[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etrax"
version = "0.1.0"
description = "Standalone Telegram bot builder core with reusable workflow modules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
frappe = ["frappe>=15"]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
